--- a/css/STYLE.CSS
+++ b/css/STYLE.CSS
@@ -9,7 +9,8 @@ html{
     background-size: 100%;
 }
 
-.paginas ul{
+
+header ul{
     display: flex;
     width: 100%;
     height: 5rem;
@@ -18,7 +19,7 @@ html{
     justify-content: space-between;
 }
 
-.paginas button{
+header button{
     width: 20rem;
     height: 5rem;
     align-items: center;
@@ -26,13 +27,13 @@ html{
     
 }
 
-.paginas a{
+header a{
     color: aliceblue;
     font-size: 2rem;
     text-decoration: none;
 }
 
-.paginas a:hover{
+header a:hover{
     text-decoration: underline;
 }
 
@@ -140,10 +141,208 @@ main .imagen-portada3 {
     font-size: 2rem;
 }
 
+.underwear-catalogo{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows:  auto auto auto auto;
+    grid-template-areas:
+    "titulo-seccion titulo-seccion"
+    "imagen1 imagen2"
+    "imagen3 imagen4"
+    "imagen5 imagen6";
+}
+
+.underwear-catalogo h2{
+    display: flex;
+    grid-area: titulo-seccion;
+    position: relative;
+    top: 6rem;
+    text-align: center;
+    font-size: 5rem;
+}
+
+.underwear-catalogo .primeraimg{
+display: flex;
+grid-area: imagen1;
+justify-content: center;
+padding: 10%;
+}
+
+.underwear-catalogo .segundaimg{
+    display: flex;
+    grid-area: imagen2;
+    justify-content: center;
+    padding: 10%;
+}
+
+.underwear-catalogo .tercerimg{
+    display: flex;
+    grid-area: imagen3;
+    justify-content: center;
+    padding: 10%;
+}
+
+.underwear-catalogo .cuartaimg{
+    display: flex;
+    grid-area: imagen4;
+    justify-content: center;
+    padding: 10%;
+}
+
+.underwear-catalogo .quintaimg{
+    display: flex;
+    grid-area: imagen5;
+    justify-content: center;
+    padding: 10%;
+}
+
+.underwear-catalogo .sextaimg{
+    display: flex;
+    grid-area: imagen6;
+    justify-content: center;
+    padding: 10%;
+}
+.underwear-catalogo img{
+    display: flex;
+    height: 25rem;
+}
+
+.overwear-catalogo{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows:  auto auto auto auto;
+    grid-template-areas:
+    "titulo-seccion titulo-seccion"
+    "imagen1 imagen2"
+    "imagen3 imagen4"
+    "imagen5 imagen6";
+}
+
+.overwear-catalogo h2{
+    display: flex;
+    grid-area: titulo-seccion;
+    position: relative;
+    top: 6rem;
+    text-align: center;
+    font-size: 5rem;
+}
+
+.overwear-catalogo .primeraimg{
+display: flex;
+grid-area: imagen1;
+justify-content: center;
+padding: 10%;
+}
+
+.overwear-catalogo .segundaimg{
+    display: flex;
+    grid-area: imagen2;
+    justify-content: center;
+    padding: 10%;
+}
+
+.overwear-catalogo .tercerimg{
+    display: flex;
+    grid-area: imagen3;
+    justify-content: center;
+    padding: 10%;
+}
+
+.overwear-catalogo .cuartaimg{
+    display: flex;
+    grid-area: imagen4;
+    justify-content: center;
+    padding: 10%;
+}
+
+.overwear-catalogo .quintaimg{
+    display: flex;
+    grid-area: imagen5;
+    justify-content: center;
+    padding: 10%;
+}
+
+.overwear-catalogo .sextaimg{
+    display: flex;
+    grid-area: imagen6;
+    justify-content: center;
+    padding: 10%;
+}
+.overwear-catalogo img{
+    display: flex;
+    height: 25rem;
+}
+
+
+.accesorios-catalogo{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows:  auto auto auto ;
+    grid-template-areas:
+    "titulo-seccion titulo-seccion"
+    "imagen1 imagen2"
+    "imagen3 imagen4";
+}
+
+.accesorios-catalogo h2{
+    display: flex;
+    grid-area: titulo-seccion;
+    position: relative;
+    top: 6rem;
+    text-align: center;
+    font-size: 5rem;
+}
+
+.accesorios-catalogo .primeraimg{
+display: flex;
+grid-area: imagen1;
+justify-content: center;
+padding: 10%;
+}
+
+.accesorios-catalogo .segundaimg{
+    display: flex;
+    grid-area: imagen2;
+    justify-content: center;
+    padding: 10%;
+}
+
+.accesorios-catalogo .tercerimg{
+    display: flex;
+    grid-area: imagen3;
+    justify-content: center;
+    padding: 10%;
+}
+
+.accesorios-catalogo .cuartaimg{
+    display: flex;
+    grid-area: imagen4;
+    justify-content: center;
+    padding: 10%;
+}
+
+.accesorios-catalogo img{
+    display: flex;
+    height: 25rem;
+}
+
+.catalogo-links a{
+    position: relative;
+    line-height:normal;
+    display:table-caption;
+    margin:0;
+    padding:10px;
+    text-align: center;
+    text-decoration: none;
+    color: aliceblue;
+    font-size: 4rem;
+}
+
+
 footer {
     display: flex;
     background-color: lightgreen;
-    position: absolute;
+    position: fixed;
     bottom:0;
     height: auto;
     left:0;
@@ -154,3 +353,4 @@ footer a{
     text-decoration: none;
     color: black;
 }
+
