--- a/css/STYLE.CSS
+++ b/css/STYLE.CSS
@@ -425,6 +425,48 @@ footer a{
     color: black;
 }
 
+.nosotros-info{
+    background-color: lightpink;
+    display: grid;
+    width: 90%;
+    align-items: center;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 20% 40% 40%;
+    grid-template-areas: 
+    ". titulo ."
+    "logo info info"
+    "info-fabrica info-fabrica fabrica";
+    margin: 50px 50px;
+    background-color: lightpink;
+    justify-content: space-between;
+}
+
+.nosotros-info img{
+    grid-area: logo;
+    height: 25rem;
+}
+
+.nosotros-info p{
+    grid-area: info;
+    font-size: 2.5rem;
+}
+
+.nosotros-info h1{
+    grid-area: titulo;
+    font-size: 7rem;
+    padding-left: 60px;
+    padding-top: 30px;
+}
+
+.nosotros-info .fabrica {
+    grid-area: fabrica;
+    height: 22rem;
+}
+
+.nosotros-info .fabrica-info{
+    grid-area: info-fabrica;
+}
+
 
 @media (max-width:1024px){
     .catalogo-links h1{
@@ -584,4 +626,3 @@ footer a{
     height: 22rem;
 }
 }
-
