--- a/css/STYLE.CSS
+++ b/css/STYLE.CSS
@@ -410,6 +410,68 @@ padding: 10%;
     padding: 15px;
 }
 
+.tabla{
+    display: grid;
+    width: 90%;
+    align-items: normal;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 20% 20% 50% 10%;
+    grid-template-areas: 
+    ". titulo ."
+    "articulos cantidad precio"
+    "info1 info2 info3"
+    ". comprar .";
+    margin: 50px 50px;
+    background-color: lightpink;
+    height: 100vh;
+    justify-content: space-between;
+}
+.tabla .tabla-titulo{
+    grid-area: titulo;
+    font-size: 4rem;
+}
+
+.tabla .tabla-art{
+    grid-area: articulos;
+    font-size: 3rem;
+}
+
+.tabla .tabla-cant{
+    grid-area: cantidad;
+    font-size: 3rem;
+}
+
+.tabla .tabla-pre{
+    grid-area: precio;
+    font-size: 3rem;
+}
+
+.tabla .tabla-articulo{
+    grid-area: info1;
+    font-size: 2rem;
+    padding-left: 20px;
+}
+
+.tabla .tabla-cantidad{
+    grid-area: info2;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.tabla .tabla-precio{
+    grid-area: info3;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.tabla .tabla-comprar{
+    grid-area: comprar;
+    font-size: 3.5rem;
+    padding: 5px;
+    background-color: black;
+    color: #fff;
+}
+
 footer {
     display: flex;
     background-color: lightgreen;
@@ -554,7 +616,6 @@ footer a{
     .catalogo-links img{
         height: 15rem;
     }
-   
     .producto-compra{
         background-color: lightpink;
         width: 100%;
