--- a/SCSS/layout/_media768px.scss
+++ b/SCSS/layout/_media768px.scss
@@ -1,6 +1,6 @@
 @media (max-width: 768px){
-    .header
-        {width: 100% ;
+    .header{
+        width: 100% ;
         justify-content: center;
     .header ul li a{
         font-size: 1rem;
