--- a/SCSS/layout/_media1024px.scss
+++ b/SCSS/layout/_media1024px.scss
@@ -37,4 +37,9 @@ img{
         height: 15rem;
     }
 }
+.nosotros-info{
+    img{height: 18rem;}
+    .fabrica{ height: 14rem;}
+    p{font-size: 1.5rem;}
+    }
 }
