--- a/SCSS/layout/_main-nosotros.scss
+++ b/SCSS/layout/_main-nosotros.scss
@@ -12,30 +12,33 @@
     margin: 50px 50px;
     background-color: lightpink;
     justify-content: space-between;
+    gap: 10px;
     
     img{
     grid-area: logo;
-    height: 25rem;
+    height: 22rem;
 }
 
 p{
     grid-area: info;
-    font-size: 2.5rem;
+    font-size: 2rem;
+    text-align: center;
+    padding-left: 30px;
 }
 
 h1{
     grid-area: titulo;
     font-size: 7rem;
-    padding-left: 60px;
+    padding-left: 40px;
     padding-top: 30px;
 }
 
 .fabrica {
     grid-area: fabrica;
-    height: 22rem;
+    height: 16rem;
 }
 
 .fabrica-info{
     grid-area: info-fabrica;
-}
-}
+    text-align: center;
+}}
