--- a/SCSS/layout/_media768px.scss
+++ b/SCSS/layout/_media768px.scss
@@ -38,7 +38,10 @@
     }
 }
 .portada{
+    display: flex;
+    flex-direction: column;
     h1{
+        text-align: center;
         font-size: 5rem;
     }
     h2{
