--- a/SCSS/layout/_media1024px.scss
+++ b/SCSS/layout/_media1024px.scss
@@ -10,6 +10,9 @@
 img{
     height: 20rem;
 }
+a{
+    font-size: 2.5rem;
+}
 }
 .producto-compra { h1{
     font-size: 6rem;
@@ -38,8 +41,12 @@ img{
     }
 }
 .nosotros-info{
-    img{height: 18rem;}
-    .fabrica{ height: 14rem;}
-    p{font-size: 1.5rem;}
+    img{height: 16rem;}
+
+    .fabrica{height: 12rem;}
+
+    p{font-size: 1.2rem;}
+
+    h1{font-size: 5.8rem;}
     }
 }
