--- a/SCSS/layout/_media768px.scss
+++ b/SCSS/layout/_media768px.scss
@@ -8,7 +8,7 @@
     }}
     .catalogo-links{
     a{
-        font-size: 3rem;
+        font-size: 2rem;
     }
     h2{
         font-size: 4rem;
@@ -54,4 +54,15 @@
         font-size: 1.5rem;
     }
 }
+.nosotros-info{
+    img{height: 12rem;}
+
+    .fabrica{height: 8rem;}
+
+    p{font-size: 1rem;
+    text-align: left;
+padding-right: 15px;}
+
+    h1{font-size: 4.5rem;}
+    }
 }
