--- a/css/STYLE.CSS
+++ b/css/STYLE.CSS
@@ -172,6 +172,7 @@ html {
   grid-template-rows: auto auto auto auto;
   grid-template-areas: "titulo-seccion titulo-seccion" "imagen1 imagen2" "imagen3 imagen4" "imagen5 imagen6";
   align-items: center;
+  justify-content: center;
 }
 .underwear-catalogo h2, .overwear-catalogo h2 {
   display: flex;
@@ -328,10 +329,15 @@ html {
   text-align: center;
   text-decoration: none;
   color: aliceblue;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 .catalogo-links img {
   height: 25rem;
+}
+.catalogo-links h1 {
+  color: whitesmoke;
+  text-align: center;
+  font-size: 10rem;
 }
 
 .producto-compra {
@@ -395,6 +401,7 @@ html {
   font-size: 2rem;
   text-align: center;
   padding-left: 30px;
+  padding-right: 25px;
 }
 .nosotros-info h1 {
   grid-area: titulo;
@@ -438,6 +445,9 @@ footer a {
   .catalogo-links img {
     height: 20rem;
   }
+  .catalogo-links a {
+    font-size: 2.5rem;
+  }
   .producto-compra h1 {
     font-size: 6rem;
   }
@@ -462,13 +472,16 @@ footer a {
     height: 15rem;
   }
   .nosotros-info img {
-    height: 18rem;
+    height: 16rem;
   }
   .nosotros-info .fabrica {
-    height: 14rem;
+    height: 12rem;
   }
   .nosotros-info p {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+  }
+  .nosotros-info h1 {
+    font-size: 5.8rem;
   }
 }
 @media (max-width: 768px) {
@@ -481,7 +494,7 @@ footer a {
     justify-content: center;
   }
   .catalogo-links a {
-    font-size: 3rem;
+    font-size: 2rem;
   }
   .catalogo-links h2 {
     font-size: 4rem;
@@ -525,6 +538,20 @@ footer a {
   .portada a {
     font-size: 1.5rem;
   }
+  .nosotros-info img {
+    height: 12rem;
+  }
+  .nosotros-info .fabrica {
+    height: 8rem;
+  }
+  .nosotros-info p {
+    font-size: 1rem;
+    text-align: left;
+    padding-right: 15px;
+  }
+  .nosotros-info h1 {
+    font-size: 4.5rem;
+  }
 }
 @media (max-width: 425px) {
   .header {
@@ -532,16 +559,12 @@ footer a {
     height: 160px;
     background-size: 100%;
     background-color: rgb(138, 44, 226);
-    justify-content: center;
   }
   .header ul li a {
     padding: 0;
   }
-  .header li a.active, .header li a:hover {
-    background: none;
-  }
   .catalogo-links a {
-    font-size: 2rem;
+    font-size: 1rem;
   }
   .catalogo-links h2 {
     font-size: 3rem;
@@ -594,15 +617,40 @@ footer a {
     grid-area: imagen;
     height: 24rem;
   }
-  .portada {
-    display: flex;
-    flex-direction: column;
-  }
   .portada a {
     font-size: 2rem;
   }
+  .nosotros-info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 55px;
+    margin-top: 10px;
+    padding-right: 10px;
+  }
+  .nosotros-info img {
+    height: 10rem;
+    padding: 10px;
+  }
+  .nosotros-info p {
+    font-size: 1.5rem;
+  }
+  .nosotros-info .fabrica {
+    height: 10rem;
+    padding: 10px;
+  }
+  .nosotros-info h1 {
+    font-size: 4rem;
+    padding-right: 25px;
+  }
 }
 @media (max-width: 375px) {
+  .header {
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+  }
   .catalogo-links img {
     height: 12rem;
   }
@@ -621,6 +669,13 @@ footer a {
   }
   .producto-compra img {
     height: 22rem;
+  }
+  .nosotros-info {
+    margin: 0;
+    margin-bottom: 50px;
+  }
+  footer h3 {
+    font-size: 1rem;
   }
 }
 
