--- a/SCSS/layout/_media375px.scss
+++ b/SCSS/layout/_media375px.scss
@@ -7,9 +7,7 @@
     .catalogo-links{ img{
         height: 12rem;
     }
-    a{
-        font-size: 1rem;
-    }
+
     h2{
         font-size: 2rem;
         top: 6%;
@@ -27,6 +25,18 @@
 .nosotros-info{
     margin: 0;
     margin-bottom: 50px;
+}
+.tabla{
+    .tabla-titulo{
+        padding: 0;
+        font-size: 2.2rem;
+    }
+    .tabla-pre , .tabla-cant , .tabla-art{
+        font-size: 1.2rem;
+    }
+    .tabla-comprar{
+        font-size: 1.7rem;
+    }
 }
 footer{
     h3{font-size: 1rem;}
