--- a/SCSS/layout/_media768px.scss
+++ b/SCSS/layout/_media768px.scss
@@ -65,4 +65,9 @@ padding-right: 15px;}
 
     h1{font-size: 4.5rem;}
     }
+    .tabla{
+        .tabla-pre , .tabla-cant , .tabla-art{
+            font-size: 2.2rem;
+        }
+    }
 }
